--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 </head>
 <body>
 
-    <h1>Les monuments de Montpellier</h1>
+    <div class="logo">
+        <h1>Les monuments de Montpellier</h1>
+        <img src="/1200px-Ville_de_Montpellier_(logo).svg.png" alt="Logo de la ville de Montpellier">
+    </div>
 
     <div class="placementPlan">
         <div class="plan" id="plan"></div>
@@ -23,7 +26,7 @@
 
     
 
-    <script src="/dataMontpellier-json.js" type="text/javascript"></script>
-    <script src="index.js" ></script>
+    <script src="/dataMontpellier-json.js" ></script>
+    <script src="/index.js" ></script>
 </body>
 </html>
