--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
+    <link rel="icon" type="image/png" href="1200px-Ville_de_Montpellier_(logo).svg.png" />
     <link rel="stylesheet" href="style.css">
     <title>Monuments Montpellier</title>
 </head>
 <body>
 
-    <div class="logo">
+    <!-- <div class="logo">
         <h1>Les monuments de Montpellier</h1>
         <img src="/1200px-Ville_de_Montpellier_(logo).svg.png" alt="Logo de la ville de Montpellier">
-    </div>
+    </div> -->
+
+
+    <header id="header" class="logo">
+        <span class="logoMontpellier"><img src="/1200px-Ville_de_Montpellier_(logo).svg.png" alt="Logo de la ville de Montpellier" /></span>
+        <h1>Les monuments de la ville <br> de Montpellier</h1>
+    </header>
 
     <div class="placementPlan">
         <div class="plan" id="plan"></div>
